// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text  /> should match snapshot 1`] = `
.c0 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  max-width: 40px;
  display: inline-block;
  cursor: pointer;
  font-weight: 400;
}

.c0:hover {
  font-weight: 500;
  color: #1E3DE4;
}

<div
  class="jsx-418573366 tooltip "
>
  <p
    class="jsx-3390086683  c0"
    hovercolor="#1E3DE4"
    maxwidth="40px"
  >
    <span>
      1234567890
    </span>
  </p>
</div>
`;

exports[`<Text  /> should match snapshot when set maxCount 1`] = `
.c0 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  display: inherit;
  cursor: pointer;
  font-weight: 400;
}

.c0:hover {
  font-weight: 500;
  color: #1E3DE4;
}

<div
  class="jsx-418573366 tooltip "
>
  <p
    class="jsx-3390086683  c0"
    hovercolor="#1E3DE4"
  >
    12345...
  </p>
</div>
`;
